Closed
Bug 1349482
Opened 9 years ago
Closed 9 years ago
Port 1312087 to mailnews: nsAbOutlookDirectory.h(81): error C2143: syntax error: missing ';' before '*' [PRLock *mProtector;]
Categories
(MailNews Core :: Address Book, defect)
MailNews Core
Address Book
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 55.0
People
(Reporter: jorgk-bmo, Assigned: jorgk-bmo)
Details
(Whiteboard: [Thunderbird-testfailure: B Win all])
Attachments
(1 file, 1 obsolete file)
|
1.01 KB,
patch
|
Details | Diff | Splinter Review |
c:\builds\moz2_slave\tb-c-cen-w32-00000000000000000\build\mailnews\addrbook\src\nsAbOutlookDirectory.h(81): error C2143: syntax error: missing ';' before '*'
c:\builds\moz2_slave\tb-c-cen-w32-00000000000000000\build\mailnews\addrbook\src\nsAbOutlookDirectory.h(81): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
c:\builds\moz2_slave\tb-c-cen-w32-00000000000000000\build\mailnews\addrbook\src\nsAbOutlookDirectory.h(81): error C2238: unexpected token(s) preceding ';'
c:/builds/moz2_slave/tb-c-cen-w32-00000000000000000/build/mailnews/addrbook/src/nsAbOutlookDirectory.cpp(42): error C2065: 'mProtector': undeclared identifier
And more.
Coming from: https://hg.mozilla.org/mozilla-central/rev/54440069e459
| Assignee | ||
Comment 1•9 years ago
|
||
Temporary fix so we can compile (mine hasn't finished yet, so no guarantee). Note that Outlook is not supported at the moment, so this does no harm.
Assignee: nobody → jorgk
| Assignee | ||
Comment 2•9 years ago
|
||
This was easier than I thought. The clue is here:
https://hg.mozilla.org/mozilla-central/rev/54440069e459#l1.12
Attachment #8849940 -
Attachment is obsolete: true
| Assignee | ||
Comment 3•9 years ago
|
||
I'll push this after the next M-C merge.
| Assignee | ||
Comment 4•9 years ago
|
||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 55.0
You need to log in
before you can comment on or make changes to this bug.
Description
•