Bug 1349482 - port 1312087 to mailnews (include prlock.h). rs=bustage-fix